preview: handle toc items outside main directory